Audit Database advisor evidence and structural rule accuracy
Distinguish uncertain metadata from absence, preserve qualified structural semantics, correct vendor generator/catalog observations and narrow declaration cross-references. Retire four unsupported rules while preserving IDs and report contracts.

Refs #977

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>